Bug #38770 Falcon disregards datadir option and creates files in the current directory
Submitted: 13 Aug 2008 15:03 Modified: 4 Oct 2008 16:32
Reporter: Vladislav Vaintroub
Status: Closed
Category:Server: Falcon Severity:S3 (Non-critical)
Version: OS:Any
Assigned to: Vladislav Vaintroub Target Version:6.0.7
Tags: sporadic, test failure, pushbuild, widespread
Triage: D3 (Medium)

[13 Aug 2008 15:03] Vladislav Vaintroub
Description:
Falcon disregards datadir option and creates files in the current directory.
The error  becomes apparent in embedded environment (it cannot be seen
when normal server runs, as mysqld seems to change its current directory to
datadir)

How to repeat:
compile server with embedded options (e.g WITH_EMBEDDED_SERVER on Windows
, can't remember the option on Linux)

cd mysql-test
perl mysql-test-run.pl --embedded-server 

stop the test after approx 1 minute
verify that falcon_master.fts, falcon_user.fts and log files are in current directory

verify that all other data files (for innodb/maria/myisam etc) are in var/master-data
(that is the datadir)
[13 Aug 2008 16:58] Miguel Solorzano
Verified on Windows.
[13 Aug 2008 21:41] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/51560

2778 Vladislav Vaintroub	2008-08-13
      Bug #38770: falcon disregards datadir option and always creates files in current 
      directory.
      
      This is fixed in this patch. For all file operations that accept name as parameter 
      (create, open, delete, stat), relative paths are  translated to  absolute using
      mysql_real_data_home as base directory.
      
      Also, falcon_serial_log_dir default value is now mysql_real_data_home.
[14 Aug 2008 13:24] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/51621

2779 Vladislav Vaintroub	2008-08-14
      Bug #38770: falcon disregards datadir option and always creates files in current 
      directory.
            
      This is fixed in this patch. For all file operations that accept name as parameter 
      (create, open, delete, stat), relative paths are  translated to  absolute using
      mysql_real_data_home as base directory.
      Also, falcon_serial_log_dir default value is now mysql_real_data_home.
[28 Aug 2008 22:17] Bugs System
Pushed into 6.0.7-alpha  (revid:cbell@mysql.com-20080822132131-uveo6wiuecy6m2b8) (version
source revid:cbell@mysql.com-20080822132131-uveo6wiuecy6m2b8) (pib:3)
[14 Sep 2008 3:36] Bugs System
Pushed into 6.0.7-alpha  (revid:vvaintroub@mysql.com-20080814112418-jql7dbnpnfu11fto)
(version source revid:timothy.smith@sun.com-20080813081634-s8rre51iveicu311) (pib:3)
[4 Oct 2008 16:32] Jon Stephens
Documented in the 6.0.7 changelog as follows:

        Falcon did not honor the --datadir option and created its files in the
        current directory instead. This error was apparent only when running the
        embedded version of MySQL.