Bug #38770: falcon disregards datadir option and always creates files in current directory.

This is fixed in this patch. For all file operations that accept name as parameter 
(create, open, delete, stat), relative paths are  translated to  absolute using
mysql_real_data_home as base directory.
Also, falcon_serial_log_dir default value is now mysql_real_data_home.